# schoolflow

./: .env  .gitignore  README.md  schoolflow_setup_and_tests.ipynb
backend/: .coverage  .env  README.md  alembic.ini  create_tables.py  invoice.json  login.json  migrate.sh  payload.json  pending.sql  pyproject.toml  pytest.ini  test_receipt.db
backend/app/: main copy.py  main.py
backend/app/core/: config - Copy.py  config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  class_section.py  student.py  user.py
backend/app/ops/: create_receipt.py  delete_all_receipts.py  full_inspect.py  render_receipt.py  seed_student_101.py  update_receipt_path.py
backend/app/repositories/: class_section_repo.py  fee_repo copy.py  fee_repo.py  invoice_repo.py  student_repo.py  user_repo.py
backend/app/schemas/: auth.py  class_section.py  student.py  user.py
backend/app/services/: auth_service.py  fees_service.py
backend/migrations/: env - Copy.py  env.py  script.py.mako
backend/migrations/versions/: 03fca167d58d_initial_schema.py  20250929_inv_constraints.py  20251024_add_invoice_no.py  20251026_add_inv_id.py  20251108_payidempkey.py  20251201_user_student_link.py  4832b4808674_add_created_by_to_receipt.py  a5daa4f83934_add_user_table.py  b9bec1465e3a_add_fee_models_plan_component_.py  d29d4f37f099_fix_fk_references_to_students_id.py  f06fb140ee6c_initial_schema.py  fix_alembic_version_length
backend/ops/seeds/: load_seeds.py  (+6 more)
backend/scripts/: debug_invoice_download.py
backend/tests/: conftest.py  seed_fixtures.py
(+149 files in other folders)
